Correct event form spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -843,7 +843,7 @@ input[type="number"] {
 
 .card {
     color: #fff;
-    text-align: right;
+    text-align: center;
     font-size: 1.25rem;
     letter-spacing: 1.5px;
 }
